2011-02-24  David Dorwin  <ddorwin@chromium.org>

Reviewed by Eric Seidel.

        Enable WebKit Full Screen API in Chromium. The element becomes the full size of the window, but the window is not yet full screen. Support is disabled by default.

        fullscreen javascript bindings not implemented for v8
        https://bugs.webkit.org/show_bug.cgi?id=44797

        Tested by the existing fullscreen Layout Tests.

        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
2011-02-24  David Dorwin  <ddorwin@chromium.org>

        Reviewed by Eric Seidel.

        Enable WebKit Full Screen API in Chromium. The element becomes the full size of the window, but the window is not yet full screen. Support is disabled by default.

        fullscreen javascript bindings not implemented for v8
        https://bugs.webkit.org/show_bug.cgi?id=44797

        * features.gypi:
        * public/WebSettings.h:
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::supportsFullScreenForElement):
        (WebKit::ChromeClientImpl::enterFullScreenForElement):
        (WebKit::ChromeClientImpl::exitFullScreenForElement):
        (WebKit::ChromeClientImpl::fullScreenRendererChanged):
        * src/ChromeClientImpl.h:
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setFullScreenEnabled):
        * src/WebSettingsImpl.h:

Canonical link: https://commits.webkit.org/69504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79584 268f45cc-cd09-0410-ab3c-d52691b4dbfc