third_party/WebKit/Source/WebCore/WebCore.gypi
@@ -3899,6 +3899,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
             'rendering/RenderFrameBase.h',
             'rendering/RenderFrameSet.cpp',
             'rendering/RenderFrameSet.h',
+            'rendering/RenderFullScreen.cpp',
+            'rendering/RenderFullScreen.h',
             'rendering/RenderHTMLCanvas.cpp',
             'rendering/RenderHTMLCanvas.h',
             'rendering/RenderIFrame.cpp',
